# aio_fe_debug

./: .gitignore  Cargo.toml  README.MD  Trunk.bak  Trunk.toml  index.html  style.css
assets/: tailwind.config.js
src/: app.rs  components.rs  layout.rs  main.rs  models.rs  pages.rs
src/components/: headerpage.rs  sidebar.rs  t_button.rs  t_error.rs  t_info.rs  t_input.rs  t_loading.rs  t_select.rs  t_table.rs  t_topbar.rs
src/models/: t_user.rs
src/pages/: customer.rs  home.rs  login.rs  logout.rs  payment.rs  receipt.rs  user.rs  user_check.rs
