[package]
name = "lfe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version = "0.3.0", features = ["stable"]}
leptos_router = {version = "0.3.0",features = ["stable", "csr"]}
leptos_meta = { version = "0.3.0", features = ["stable", "csr"] }

gloo = "0.8.0"
serde_json = "1.0.96"
serde = "1.0.163"

log = "0.4.6"
wasm-logger = "0.2.0"
leptos_icons = {version="0.0.10", features = ["FaBarsSolid", "BsPeopleFill", "BsHouseFill", "BsArrowBarLeft", "BsArrowRightCircleFill"] }

